fix: add gap on kidsAndYoung, make color change on hover on buttons

--- a/yhm/src/srcPages/kidsAndYoung/ingress/ingress.module.css
+++ b/yhm/src/srcPages/kidsAndYoung/ingress/ingress.module.css
@@ -41,6 +41,10 @@
   .ingress {
     padding: 5%;
   }
+
+  .ingress__wrapper {
+    gap: 2rem;
+  }
 }
 
 @media (min-width: 2000px) {
